--- a/APP/good_heart/pubspec.yaml
+++ b/APP/good_heart/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animated_text_kit: ^4.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -30,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   web_socket_channel: ^2.1.0
   json_serializable: ^5.0.2
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
